--- a/client/src/Components/list.css
+++ b/client/src/Components/list.css
@@ -3,24 +3,26 @@ h1 {
   padding-left: 5px;
 }
 
-.list ul {
+.shoppinglist ul {
   list-style: none;
-  margin: 0;
+  margin: 0 20 0 0;
   padding: 0;
-  box-shadow: 1px 3px 8px #888;
-}
-.lisli {
-  padding: 10px 15px;
-  background: #eee;
-  &:hover {
-    background: darken(#eee, 5%);
-  }
 }
 
-.placeholder {
-  background: rgb(255, 240, 120);
-  &:before {
-    content: 'Drop here';
-    color: rgb(225, 210, 90);
-  }
+.shoppinglist ul li {
+  background: #fff;
+  padding: 10px 20px;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  line-height: 1;
+}
+
+.newlyAdded {
+  font-weight: bold;
+}
+
+.shoppinglist li .drag {
+  margin-right: 15px;
+  cursor: move;
 }
